modifica app.js / endpoint 1(non ancora funziona)
